# leet_code_solutions

./: README.md
c++/: CMakeLists.txt
c++/algorithms/: CMakeLists.txt  task1.cpp  task2.cpp  task24.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
python/: task1.py  task10.py  task11.py  task12.py  task13.py  task14.py  task15.py  task16.py  task17.py  task18.py  task19.py  task2.py  task20.py  task21.py  task22.py  task23.py  task24.py  task25.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py  task9.py
